# openmux-server

./: .flake8  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  vulture_whitelist.py
config/: authentication.yaml  client.yaml  integration_test.yaml  loopback_test.yaml  loopback_web.yaml  remote_leaf_server.yaml  security.yaml  server.yaml
config_schema/: openmux_config_schema.yaml
debian/: control  copyright  openmux-server.service  openmux.install  openmux.postinst  openmux.postinst.debhelper  openmux.postrm.debhelper  openmux.prerm.debhelper  openmux.substvars  rules
debian/package-config/: authentication.yaml  client.yaml  security.yaml  server.yaml
deploy/: openmux-install.sh
docs/: ADAPTER_PORT_CONTRACT.md  ARCHITECTURE.md  CONFIG_INVARIANTS.md  DEFAULTS.md  INSTALL.md  SMOKE_TEST.md
docs/configuration/: adapters.md
docs/to_check/: openmux_authentication_schema.yaml  openmux_config_schema.yaml  openmux_security_schema.yaml
openmux/: __init__.py
openmux/cli/: openmuxctl.py
openmux/client/: __init__.py  console.py  logging_manager.py  main.py
openmux/common/: __init__.py  federation_types.py
openmux/server/: __init__.py  auth_manager.py  config_manager.py  console_manager.py  console_manager_helper.py  data_logger.py  logging_manager.py  main.py  muxcon_protocol.py  port_manager.py  port_utils.py  security_policy.py
scripts/: install_xtermjs.py  serial_loopback.md  serial_loopback.py  smoke_workflow.py  update_deb_changelog.py  validate_config.py  validate_schema.py
specifications/: Unified_MuxCon_Adapter_Specification.md
static/: web_console.css
templates/web_console/: config_editor.html.j2  console.html.j2  index.html.j2  layout.html.j2  login.html.j2  logs.html.j2  (+1 more)
tests/: README.md  __init__.py  conftest.py  test_adapter_factory_security.py  test_client_initiator.py  test_client_initiator_validate_and_config.py  test_close.py  test_command_adapter.py  test_command_privileges.py  test_control_socket.py  test_external_auth.py  test_federated_cache_ttl_and_persist.py  test_federated_disconnect_behavior.py  test_logging_manager.py  test_loopback_adapter.py  test_missing_features.py  test_muxcon_adapter_basic.py  test_muxcon_adapter_frames.py  test_muxcon_adapter_handshake.py  test_muxcon_initiator_auth_behavior.py  test_port_contract_enforcement.py  test_port_manager_coverage_additional.py  test_port_manager_extended.py  test_port_normalization.py  test_port_write_normalization.py  test_reload_serial_ports.py  test_reload_signals.py  test_security_policy.py  test_server.py  test_web_console_id_prefix_logic.py  test_web_console_loopback_meta.py  test_web_console_probes.py  test_websocket_client_adapter.py
(+44 files in other folders)
